--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <!-- 3 表示 3 秒后跳转，改成 0 就是立刻跳转 -->
-    <meta http-equiv="refresh" content="3;url=https://www.example.com">
+    <meta http-equiv="refresh" content="3;url=https://lejva.tprsmi.com/app/register.php?site_id=1058&topId=26369&selfPlanId=197246">
     <title>正在跳转...</title>
 </head>
 <body>
