--- a/index.html
+++ b/index.html
@@ -1,12 +1,162 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <!-- 3 表示 3 秒后跳转，改成 0 就是立刻跳转 -->
-    <meta http-equiv="refresh" content="3;url=https://lejva.tprsmi.com/app/register.php?site_id=1058&topId=26369&selfPlanId=197246">
-    <title>正在跳转...</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+<title>胜天国际</title>
+
+<style>
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  -webkit-tap-highlight-color: transparent;
+}
+
+body{
+  min-height:100vh;
+  background:
+    radial-gradient(circle at 50% 0%, #2a2a4f 0%, #0b0b16 60%);
+  font-family:
+    "PingFang SC",
+    "HarmonyOS Sans",
+    "Source Han Sans SC",
+    "Noto Sans SC",
+    "Microsoft YaHei",
+    sans-serif;
+  display:flex;
+  justify-content:center;
+  color:#fff;
+}
+
+.h5{
+  width:100%;
+  max-width:390px;
+  padding:28px 18px 40px;
+  text-align:center;
+}
+
+/* LOGO */
+.logo-box{
+  width:110px;
+  height:110px;
+  margin:10px auto 18px;
+  border-radius:26px;
+  background:linear-gradient(145deg,#2e2e55,#14142a);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-weight:700;
+  font-size:28px;
+  color:#f2cf8b;
+}
+
+/* 副标题 */
+.sub{
+  font-size:13px;
+  font-weight:500;
+  letter-spacing:0.5px;
+  color:#d6c48a;
+  margin-bottom:18px;
+}
+
+/* 绿色状态条 */
+.notice{
+  margin:0 auto 26px;
+  padding:14px 10px;
+  border-radius:14px;
+  background:linear-gradient(90deg,#1f4f39,#217a4f);
+  color:#63ff9b;
+  font-size:15px;
+  font-weight:600;
+  letter-spacing:0.5px;
+}
+
+/* 主标题 */
+.title{
+  font-size:22px;
+  font-weight:700;
+  letter-spacing:1px;
+  margin-bottom:6px;
+}
+
+.year{
+  font-size:13px;
+  font-weight:500;
+  color:#b5b5b5;
+  margin-bottom:26px;
+}
+
+/* 金色按钮 */
+.btn{
+  display:block;
+  width:100%;
+  margin:14px 0;
+  padding:15px 0;
+  border-radius:32px;
+  text-decoration:none;
+  font-size:15px;
+  font-weight:600;
+  letter-spacing:0.6px;
+  color:#3a2a00;
+  background:linear-gradient(180deg,#ffe7a8,#e8b65b);
+  box-shadow:0 8px 18px rgba(232,182,91,.35);
+}
+
+.btn:active{
+  transform:scale(.97);
+}
+
+/* 底部 */
+.footer{
+  margin-top:30px;
+  font-size:12px;
+  font-weight:400;
+  color:#9e9e9e;
+  line-height:1.7;
+}
+</style>
 </head>
+
 <body>
-    <p>正在跳转到目标网站，请稍候…</p>
+<div class="h5">
+
+  <div class="logo-box">NG</div>
+
+  <div class="sub">
+    NG集团 · 选择大于努力 · 相信品牌的力量！
+  </div>
+
+  <div class="notice">
+    平台已正式上线！欢迎加入！
+  </div>
+
+  <div class="title">胜天国际 · 胜者无惧</div>
+  <div class="year">2025 · 最后一匹黑马</div>
+
+  <!-- 四个跳转 -->
+  <a class="btn" href="https://lejva.tprsmi.com/app/register.php?site_id=1058&topId=26369&selfPlanId=197246" target="_blank">
+    总代注册 ·【最高总代点位】
+  </a>
+
+  <a class="btn" href="https://t.me/STGJHYZ" target="_blank">
+    飞机 · 内排通知频道
+  </a>
+
+  <a class="btn" href="https://t.me/STGJHYZ" target="_blank">
+    合营福利通知频道
+  </a>
+
+  <a class="btn" href="https://t.me/STGFHYZ" target="_blank">
+    选对台子 · 远比跟对人重要！
+  </a>
+
+  <div class="footer">
+    官方直营 · 结算秒到 · 佣金透明 · 实时查询<br>
+    NG集团 · 品质铸就品牌！
+  </div>
+
+</div>
 </body>
 </html>
