--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ body{
 
   <!-- 顶部 NG CASINO 图 -->
   <div class="app-logo">
-    <img src="ng_app.png.jpg" alt="NG CASINO">
+    <img src="ng_app.png.JPG" alt="NG CASINO">
   </div>
 
   <div class="sub">
@@ -139,7 +139,7 @@ body{
 
   <!-- 胜天国际 大 LOGO -->
   <div class="title-logo">
-    <img src="ng_title.png.jpg" alt="胜天国际">
+    <img src="ng_title.png.JPG" alt="胜天国际">
   </div>
 
   <div class="year">2025 · 最后一匹黑马</div>
